--- a/style.css
+++ b/style.css
@@ -10,8 +10,14 @@ ul, ol, li {
     list-style: none;
 }
 
+html, body {
+    scroll-behavior: smooth;
+}
+
 header{
+    position: fixed;
     background-color: #333;
+    width: 100vw;
 }
 
 header nav ul {
@@ -29,4 +35,24 @@ header nav a {
 header nav a:hover{
     background-color: lightblue;
     color: black;  
+}
+
+.grupo{
+    height: 100vh;
+}
+
+#vermelho {
+    background-color: #ff6b6b;
+}
+#verde {
+    background-color: #1dd1a1;
+}
+#azul {
+    background-color: #54a0ff;
+}
+#amarelo{
+    background-color: #feca57;
+}
+#roxo {
+    background-color: purple;
 }
